@@ -21,6 +21,7 @@
 		<Addin id = "Components" version = "0.15.0"/>
 		<Addin id = "SourceEditor" version = "0.15.0"/>
 		<Addin id = "Deployment" version = "0.15.0"/>
+		<Addin id = "Deployment.Linux" version = "0.15.0"/>
 	</Dependencies>
 	
 	<Extension path = "/MonoDevelop/Core/StockIcons">
